--- a/UIs/nVISAR1.ui
+++ b/UIs/nVISAR1.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>550</width>
-    <height>485</height>
+    <height>521</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,7 +53,10 @@
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
+      </property>
+      <property name="neutrinoSave" stdset="0">
+       <bool>true</bool>
       </property>
       <widget class="QWidget" name="Settings">
        <attribute name="title">
@@ -188,9 +191,9 @@
         <item row="0" column="0" colspan="3">
          <widget class="QGroupBox" name="groupBox">
           <property name="title">
-           <string>Reference and Shot</string>
+           <string>Reference and Shot and offset</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_9">
+          <layout class="QGridLayout" name="gridLayout_9" columnstretch="1,1,0">
            <property name="margin">
             <number>0</number>
            </property>
@@ -215,6 +218,16 @@
              </property>
              <property name="neutrinoImage" stdset="0">
               <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="QDoubleSpinBox" name="sopOffset">
+             <property name="minimum">
+              <double>-99999999.989999994635582</double>
+             </property>
+             <property name="maximum">
+              <double>99999999.989999994635582</double>
              </property>
             </widget>
            </item>
@@ -252,7 +265,7 @@
             </widget>
            </item>
            <item row="0" column="1">
-            <widget class="QDoubleSpinBox" name="sopOffset">
+            <widget class="QDoubleSpinBox" name="sopTimeOffset">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
