--- a/UIs/nCamera.ui
+++ b/UIs/nCamera.ui
@@ -24,10 +24,13 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="1" column="0" colspan="3">
+     <widget class="QCameraViewfinder" name="viewfinder" native="true"/>
+    </item>
     <item row="0" column="0">
      <widget class="QComboBox" name="cameras"/>
     </item>
-    <item row="0" column="1">
+    <item row="0" column="2">
      <widget class="QToolButton" name="doIt">
       <property name="text">
        <string>...</string>
@@ -38,14 +41,21 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0" colspan="2">
-     <widget class="QCameraViewfinder" name="viewfinder" native="true"/>
+    <item row="0" column="1">
+     <widget class="QToolButton" name="keep_copy">
+      <property name="text">
+       <string>...</string>
+      </property>
+      <property name="icon">
+       <iconset resource="../resources/neutrino.qrc">
+        <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
+      </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+     </widget>
     </item>
    </layout>
-   <zorder>cameras</zorder>
-   <zorder>viewfinder</zorder>
-   <zorder>doIt</zorder>
-   <zorder>viewfinder</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
@@ -57,6 +67,11 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>cameras</tabstop>
+  <tabstop>keep_copy</tabstop>
+  <tabstop>doIt</tabstop>
+ </tabstops>
  <resources>
   <include location="../resources/neutrino.qrc"/>
  </resources>
