--- a/UIs/nCamera.ui
+++ b/UIs/nCamera.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
-    <height>374</height>
+    <width>233</width>
+    <height>186</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,11 +24,29 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <property name="leftMargin">
+     <number>4</number>
+    </property>
+    <property name="topMargin">
+     <number>4</number>
+    </property>
+    <property name="rightMargin">
+     <number>4</number>
+    </property>
+    <property name="bottomMargin">
+     <number>4</number>
+    </property>
     <item row="1" column="0" colspan="3">
      <widget class="QCameraViewfinder" name="viewfinder" native="true"/>
     </item>
     <item row="0" column="0">
-     <widget class="QComboBox" name="cameras"/>
+     <widget class="QComboBox" name="cameras">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+     </widget>
     </item>
     <item row="0" column="2">
      <widget class="QToolButton" name="doIt">
@@ -37,7 +55,7 @@
       </property>
       <property name="icon">
        <iconset resource="../resources/neutrino.qrc">
-        <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
+        <normaloff>:/icons/icon.png</normaloff>:/icons/icon.png</iconset>
       </property>
      </widget>
     </item>
@@ -57,7 +75,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <customwidgets>
   <customwidget>
