--- a/UIs/nOperator.ui
+++ b/UIs/nOperator.ui
@@ -24,10 +24,19 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_4" rowstretch="1,0,1,0,0" columnstretch="1,0">
-    <property name="horizontalSpacing">
+    <property name="leftMargin">
      <number>4</number>
     </property>
-    <property name="margin">
+    <property name="topMargin">
+     <number>4</number>
+    </property>
+    <property name="rightMargin">
+     <number>4</number>
+    </property>
+    <property name="bottomMargin">
+     <number>4</number>
+    </property>
+    <property name="horizontalSpacing">
      <number>4</number>
     </property>
     <item row="0" column="0" colspan="2">
@@ -41,7 +50,16 @@
        <string>1st operand</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>4</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
         <number>4</number>
        </property>
        <item row="0" column="1">
@@ -97,7 +115,16 @@
        <string>Operation</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>4</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
         <number>4</number>
        </property>
        <item row="0" column="0">
@@ -153,6 +180,11 @@
          <item>
           <property name="text">
            <string>Blur</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Median</string>
           </property>
          </item>
          <item>
@@ -216,7 +248,16 @@
        <string>2nd operand</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>4</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
         <number>4</number>
        </property>
        <item row="0" column="0">
@@ -295,8 +336,6 @@
    </property>
   </widget>
  </widget>
- <resources>
-  <include location="../resources/neutrino.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
