--- a/UIs/nGhost.ui
+++ b/UIs/nGhost.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>247</width>
-    <height>239</height>
+    <width>268</width>
+    <height>243</height>
    </rect>
   </property>
   <property name="font">
@@ -28,47 +28,63 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_7">
-    <property name="margin">
-     <number>4</number>
-    </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QGroupBox" name="groupBox_14">
+      <property name="title">
+       <string>Reference &amp; Shot</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_5">
+       <property name="leftMargin">
+        <number>4</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
+        <number>4</number>
+       </property>
+       <item row="1" column="0">
+        <widget class="QComboBox" name="shot">
+         <property name="toolTip">
+          <string>Shot</string>
+         </property>
+         <property name="neutrinoImage" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QComboBox" name="ref">
+         <property name="neutrinoImage" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item row="1" column="0">
      <widget class="QGroupBox" name="carrierBox">
       <property name="title">
        <string>Ghost:Interfringe, angle and weight</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_3" columnstretch="1,0,0">
-       <property name="margin">
+       <property name="leftMargin">
         <number>0</number>
        </property>
-       <item row="0" column="2">
-        <widget class="QDoubleSpinBox" name="weightCarrier">
-         <property name="toolTip">
-          <string>Frequency weight (&lt;0 for lower freq; &gt;0 for higher freq)</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-         <property name="decimals">
-          <number>1</number>
-         </property>
-         <property name="minimum">
-          <double>-9.900000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>9.900000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.100000000000000</double>
-         </property>
-         <property name="value">
-          <double>0.500000000000000</double>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
        <item row="0" column="1">
         <widget class="QDoubleSpinBox" name="angleCarrier">
          <property name="alignment">
@@ -122,24 +138,30 @@
          </property>
         </widget>
        </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QGroupBox" name="groupBox_14">
-      <property name="title">
-       <string>Images: Reference &amp;&amp; Shot</string>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_5">
-       <property name="margin">
-        <number>4</number>
-       </property>
-       <item row="1" column="0">
-        <widget class="QComboBox" name="shot">
+       <item row="0" column="2">
+        <widget class="QDoubleSpinBox" name="weightCarrier">
          <property name="toolTip">
-          <string>Shot</string>
+          <string>Frequency weight (&lt;0 for lower freq; &gt;0 for higher freq)</string>
          </property>
-         <property name="neutrinoImage" stdset="0">
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+         <property name="decimals">
+          <number>3</number>
+         </property>
+         <property name="minimum">
+          <double>0.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>9.900000000000000</double>
+         </property>
+         <property name="singleStep">
+          <double>0.010000000000000</double>
+         </property>
+         <property name="value">
+          <double>1.000000000000000</double>
+         </property>
+         <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
          </property>
         </widget>
@@ -147,28 +169,30 @@
       </layout>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="2" column="0">
      <widget class="QWidget" name="widget_3" native="true">
       <layout class="QGridLayout" name="gridLayout_2">
-       <property name="margin">
+       <property name="leftMargin">
         <number>0</number>
        </property>
-       <item row="3" column="0">
-        <widget class="QPushButton" name="doGhost">
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item row="2" column="1">
+        <widget class="QCheckBox" name="erasePrevious">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="font">
           <font>
            <pointsize>10</pointsize>
           </font>
-         </property>
-         <property name="text">
-          <string>Calculate</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QCheckBox" name="erasePrevious">
-         <property name="enabled">
-          <bool>false</bool>
          </property>
          <property name="text">
           <string>Erase previous</string>
@@ -181,37 +205,15 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
-        <widget class="QDoubleSpinBox" name="rotation">
-         <property name="suffix">
-          <string>˚</string>
-         </property>
-         <property name="decimals">
-          <number>3</number>
-         </property>
-         <property name="minimum">
-          <double>-360.000000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>360.000000000000000</double>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="2" column="0">
-        <widget class="QLabel" name="label">
+        <widget class="QPushButton" name="doGhost">
          <property name="font">
           <font>
            <pointsize>10</pointsize>
           </font>
          </property>
          <property name="text">
-          <string>Rotation</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          <string>Calculate</string>
          </property>
         </widget>
        </item>
@@ -220,7 +222,13 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+  </widget>
   <widget class="QToolBar" name="toolBar">
    <property name="windowTitle">
     <string>toolBar</string>
@@ -297,7 +305,6 @@
   <tabstop>shot</tabstop>
   <tabstop>widthCarrier</tabstop>
   <tabstop>angleCarrier</tabstop>
-  <tabstop>weightCarrier</tabstop>
   <tabstop>doGhost</tabstop>
   <tabstop>erasePrevious</tabstop>
  </tabstops>
