restyled spectral analysis ui

--- a/UIs/nOperator.ui
+++ b/UIs/nOperator.ui
@@ -76,6 +76,11 @@
        </item>
        <item row="1" column="0">
         <widget class="QRadioButton" name="radioNumber1">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Number</string>
          </property>
@@ -93,6 +98,11 @@
        </item>
        <item row="0" column="0">
         <widget class="QRadioButton" name="radioImage1">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Image</string>
          </property>
@@ -170,6 +180,11 @@
          <item>
           <property name="text">
            <string>Max</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Mod</string>
           </property>
          </item>
          <item>
@@ -262,6 +277,11 @@
        </property>
        <item row="0" column="0">
         <widget class="QRadioButton" name="radioImage2">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Image</string>
          </property>
@@ -284,6 +304,11 @@
        </item>
        <item row="1" column="0">
         <widget class="QRadioButton" name="radioNumber2">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Number</string>
          </property>
