--- a/UIs/nPhysProperties.ui
+++ b/UIs/nPhysProperties.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>214</width>
-    <height>257</height>
+    <width>381</width>
+    <height>376</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,8 +24,17 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <property name="margin">
-     <number>0</number>
+    <property name="leftMargin">
+     <number>4</number>
+    </property>
+    <property name="topMargin">
+     <number>4</number>
+    </property>
+    <property name="rightMargin">
+     <number>4</number>
+    </property>
+    <property name="bottomMargin">
+     <number>4</number>
     </property>
     <item row="0" column="0">
      <widget class="QSplitter" name="splitter">
@@ -49,6 +58,18 @@
         </font>
        </property>
       </widget>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="changePhysProperty">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Save</string>
+      </property>
      </widget>
     </item>
    </layout>
